# CameraStateMachine

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
other/: CameraStates.dia  ClassDiagram.dia
src/: camera.cpp  camera.hpp  camera_state_machine.cpp  camera_state_machine.hpp  main.cpp
